--- a/staff.html
+++ b/staff.html
@@ -36,7 +36,7 @@
       <a href="pharmacist.html">Pharmacist Review</a>
       <a href="medicine.html">Medicine</a>
       <a href="about.html">About</a>
-      <a href="staff-support.html">staff-support-inbox</a>
+      <a href="staff-support.html">Staff-support-inbox</a>
       <a href="staff-orders.html">Orders&Status</a>
     </ul>
   </nav> 
@@ -58,7 +58,7 @@
        <li><a href="pharmacist.html">💊 Pharmacist Dashboard</a></li>
        <li><a href="inventory.html">📋 Manage Inventory</a></li>
        <li><a href="about.html">📋About</a></li>
-       <li><a href="staff-support.html">staff-support-inbox</a></li>
+       <li><a href="staff-support.html">Staff-support-inbox</a></li>
        <li><a href="staff-orders.html">Orders&Status</a></li>
      </ul>
   </main>
