--- a/customer-order.html
+++ b/customer-order.html
@@ -67,7 +67,7 @@
     <a href="https://facebook.com/YourClinicPage" target="_blank" class="facebook">
       <i class="fab fa-facebook"></i> Facebook
     </a>
-    <a href="https://yourclinicwebsite.com" target="_blank" class="website">
+    <a href="https://lekoba-jpg.github.io" target="_blank" class="website">
       <i class="fas fa-globe"></i> Our Website
     </a>
   </div>
